test/expected/perr_unterminated_ansi_c.out
shit: 2:6: error: Unterminated $'...' string.
     2 |  echo $'abc
       |       ^~~~~ here.
shit: 2:11: note:
     2 |  echo $'abc
       |            ^~ Expected ' here.
